# vala-gtk4-template

./: .gitignore  LICENSE  README.md  meson.build  run.sh  setup-template.sh
data/: de.thetek.vala-gtk-template.appdata.xml.in  de.thetek.vala-gtk-template.desktop.in  de.thetek.vala-gtk-template.gschema.xml  meson.build
data/icons/: meson.build
data/resources/: de.thetek.vala-gtk-template.gresource.xml  window.blp
meson/: post_install.py
po/: POTFILES  meson.build
src/: app.vala  main.vala  meson.build  vala-gtk-template.gresource.xml  window.vala
src/ui/: window.blp
